Update headlines, external links and formatting in blog posts and pages

--- a/_includes/_article.jade
+++ b/_includes/_article.jade
@@ -43,9 +43,9 @@ article.o-article(class=(image && image.display == false) ? "o-article--full" : 
         if meta
             p.u-text-meta=meta
 
-                    +button(href=readmore target="_blank") Read more
         if readmore
             p
+                +button(readmore) Read more
 
 //- Latest Posts
 
