--- a/_includes/_share-icons.jade
+++ b/_includes/_share-icons.jade
@@ -4,12 +4,9 @@
 
 include _mixins
 
-a(href="https://twitter.com/share?text=#{headline}&amp;via=#{profiles.twitter}" target="_blank" aria-label="Share on Twitter")
-    +icon("twitter", 16)
++a("https://twitter.com/share?text=" + headline + "&amp;via=" + profiles.twitter)(aria-label="Share on Twitter") #[+icon("twitter", 16)]
 
-a(href="https://www.facebook.com/sharer.php?u=" + (posturl || "") target="_blank" aria-label="Share on Facebook")
-    +icon("facebook", 16)
++a("https://www.facebook.com/sharer.php?u=" + posturl)(aria-label="Share on Facebook") #[+icon("facebook", 16)]
 
 if medium
-    a(href=medium target="_blank" aria-label="Read on Medium")
-        +icon("medium", 16)
+    +a(medium)(aria-label="Read on Medium") #[+icon("medium", 16)]
