--- a/blog/new-york-travel-guide.jade
+++ b/blog/new-york-travel-guide.jade
@@ -2,32 +2,32 @@ include ../_includes/_mixins
 
 p New York, die Liste der romantischen Stereotypen und Erwartungen ist endlos. Nach knapp eineinhalb Monaten und einem mehr oder weniger normalen Alltag in New York bin ich zurück in Berlin und habe ein paar meiner Erfahrungen zusammengefasst. Vorneweg: Ich bin kein typischer Urlaubsmensch. Mit zwei Wochen im 4-Sterne-All-Inclusive-Hotel am Strand, für viele die verdiente Belohnung für ein ganzes anstrengendes Arbeitsjahr, kann man mich jagen. Ich mag keine Hotels und die gekünstelte Serviceatmosphäre. Ich bin ungern Tourist. Wenn ich reise, möchte ich am eigenen Leib erfahren, wie es sich anfühlt, dort zu #[em wohnen]. Mit allen Vor- und Nachteilen.
 
-h2 Wohnen und Unterkunft
++h(2) Wohnen und Unterkunft
 
-p #[a(href="https://www.airbnb.de/s/new-york?source=bb" target="_blank") Airbnb] bietet eine Fülle von Zimmern und Apartments in allen Teilen der Stadt, wie beispielsweise das wunderschöne gemütliche Studio in Bedstuy, in dem ich die letzten Wochen verbracht habe. Wenn man länger bleibt, ist der Anbieter der Wohnung oft auch bereit, mit dem Preis runterzugehen. Fragen lohnt sich! Wer Angeboten wie Airbnb und deren Konzepten – zugegebenermaßen meist nicht unberechtigt – kritisch gegenübersteht, findet online ebenfalls eine Vielzahl an professionellen Ferienwohnungen im klassischeren Sinne.
+p #[+a("https://www.airbnb.de/s/new-york?source=bb") Airbnb] bietet eine Fülle von Zimmern und Apartments in allen Teilen der Stadt, wie beispielsweise das wunderschöne gemütliche Studio in Bedstuy, in dem ich die letzten Wochen verbracht habe. Wenn man länger bleibt, ist der Anbieter der Wohnung oft auch bereit, mit dem Preis runterzugehen. Fragen lohnt sich! Wer Angeboten wie Airbnb und deren Konzepten – zugegebenermaßen meist nicht unberechtigt – kritisch gegenübersteht, findet online ebenfalls eine Vielzahl an professionellen Ferienwohnungen im klassischeren Sinne.
 
 p Die Wahl der Nachbarschaft ist wichtig und nicht immer leicht, besonders in einer neuen und unbekannten Stadt. Vor allem in New York ist es keine Seltenheit, dass man sich innerhalb weniger Minuten Fußweg ein paar Blocks weiter in einer #[em komplett] anderen Gegend wiederfindet. Und wenn man wie ich bisher hauptsächlich in Deutschland gelebt hat, ist es sehr wahrscheinlich, dass man nur sehr vage Vorstellungen davon hat, was eine &#8220;unsichere Nachbarschaft&#8221; #[em wirklich] bedeutet. Dies sollte man stets im Hinterkopf behalten.
 
-p Allerdings darf man hier den Blick für die Realität nicht verlieren und sich nicht von veralteten Vorurteilen leiten lassen. Viele Gegenden, die vor Jahren noch als quasi unbewohnbare soziale Brennpunkte galten, sind heute gentrifiziert und fast schon touristisch angehaucht. #[sup.footnote #[a(href="#fn-1") 1]] Also vertraue keinen alten Reiseführern und Boulevardzeitungslesern. Und abgesehen davon, willst du wirklich nur getünchte und beschönigte Version der Stadt sehen? Verlasse deine Komfortzone, öffne dich für neue Erfahrungen und das &#8220;normale&#8221; New York und respektiere deine Nachbarschaft und die lokale Community.
+p Allerdings darf man hier den Blick für die Realität nicht verlieren und sich nicht von veralteten Vorurteilen leiten lassen. Viele Gegenden, die vor Jahren noch als quasi unbewohnbare soziale Brennpunkte galten, sind heute gentrifiziert und fast schon touristisch angehaucht. #[sup.footnote #[+a("#fn-1") 1]] Also vertraue keinen alten Reiseführern und Boulevardzeitungslesern. Und abgesehen davon, willst du wirklich nur getünchte und beschönigte Version der Stadt sehen? Verlasse deine Komfortzone, öffne dich für neue Erfahrungen und das &#8220;normale&#8221; New York und respektiere deine Nachbarschaft und die lokale Community.
 
-h2 Apps und Alltagshelfer
++h(2) Apps und Alltagshelfer
 
 +list
-    +item #[a(href="https://itunes.apple.com/us/app/new-york-travel-guide-offline/id319296365" target="_blank") #[strong Ulmon Offline City Map]] — Mein absoluter Favorit, der mich schon oft gerettet hat. Eine komplette interaktive Karte, inklusive Hausnummern, die ohne Internet den eigenen Standort ermittelt (man muss lediglich Handyempfang haben).
+    +item #[+a("https://itunes.apple.com/us/app/new-york-travel-guide-offline/id319296365") #[strong Ulmon Offline City Map]] — Mein absoluter Favorit, der mich schon oft gerettet hat. Eine komplette interaktive Karte, inklusive Hausnummern, die ohne Internet den eigenen Standort ermittelt (man muss lediglich Handyempfang haben).
 
-    +item #[a(href="https://itunes.apple.com/us/app/google-maps/id585027354" target="_blank") #[strong Google Maps]] — Was viele nicht wissen: Auch die Google Maps App bietet die Möglichkeit, #[a(href="https://support.google.com/gmm/answer/3273567?hl=de" target="_blank") Offline-Karten] zu speichern. Einfach das entsprechende Gebiet auswählen und abspeichern.
+    +item #[+a("https://itunes.apple.com/us/app/google-maps/id585027354") #[strong Google Maps]] — Was viele nicht wissen: Auch die Google Maps App bietet die Möglichkeit, #[+a("https://support.google.com/gmm/answer/3273567?hl=de") Offline-Karten] zu speichern. Einfach das entsprechende Gebiet auswählen und abspeichern.
 
-    +item #[a(href="https://itunes.apple.com/us/app/new-york-subway-mta-map-route/id369691844" target="_blank") #[strong NYC Subway]] — Der komplette Subway-Plan mit allen Verbindungen. Lokalisierung funktioniert ebenfalls lediglich mit Handyempfang und ist hilfreich, um die nächste passende Station zu finden (zumal verschiedene Linien oft verschiedene Eingänge haben, die manchmal weit voneinander entfernt liegen).
+    +item #[+a("https://itunes.apple.com/us/app/new-york-subway-mta-map-route/id369691844") #[strong NYC Subway]] — Der komplette Subway-Plan mit allen Verbindungen. Lokalisierung funktioniert ebenfalls lediglich mit Handyempfang und ist hilfreich, um die nächste passende Station zu finden (zumal verschiedene Linien oft verschiedene Eingänge haben, die manchmal weit voneinander entfernt liegen).
 
-    +item #[a(href="https://itunes.apple.com/us/app/uber/id368677368" target="_blank") #[strong Uber]] — Der private Taxiservice Uber ist in New York zwar deutlich teurer als in Berlin, dafür allerdings rund um die Uhr verfügbar. Das Geld wird automatisch über Paypal abgebucht.
+    +item #[+a("https://itunes.apple.com/us/app/uber/id368677368") #[strong Uber]] — Der private Taxiservice Uber ist in New York zwar deutlich teurer als in Berlin, dafür allerdings rund um die Uhr verfügbar. Das Geld wird automatisch über Paypal abgebucht.
 
-p Ich empfehle außerdem das direkte Aufladen der MetroCard mit einem #[a(href="http://web.mta.info/metrocard/mcgtreng.htm#unlimited" target="_blank") Unlimited-Ride]-Paket für 7 oder 30 Tage. Dies erspart viel Stress, man ist flexibler und nimmt auch gerne mal einen kleinen Umweg, um noch etwas mehr von der Stadt zu sehen.
+p Ich empfehle außerdem das direkte Aufladen der MetroCard mit einem #[+a("http://web.mta.info/metrocard/mcgtreng.htm#unlimited") Unlimited-Ride]-Paket für 7 oder 30 Tage. Dies erspart viel Stress, man ist flexibler und nimmt auch gerne mal einen kleinen Umweg, um noch etwas mehr von der Stadt zu sehen.
 
 p Und obwohl ich anfangs sehr skeptisch war, was das Anschaffen einer separaten amerikanischen Simkarte angeht, wurde ich dann doch eines Besseren belehrt: Es lohnt sich. Bei einem längeren Aufenthalt von ca. einem Monat oder länger bietet T-Mobile ganz passable Prepaid-Pakete, die immerhin bis zu 5GB Datenvolumen enthalten (denn das ist – zumindest mir – deutlich wichtiger als Telefonminuten oder SMS).
 
 +image("newyork_sights.jpg", "Times Square und Coney Island")
 
-h2 Sightseeing 101
++h(2) Sightseeing 101
 p Zugegeben, in New York gibt es so viel zu sehen, dass es anmaßend wäre, hier nach eineinhalb Monaten eine repräsentative Auswahl zu treffen. Schlimm genug, dass ich mir anmaße, einen Guide zu schreiben. Aber hier trotzdem ein paar meiner klassischen Favoriten, die außerdem fast alle gratis sind.
 
 +list
@@ -35,7 +35,7 @@ p Zugegeben, in New York gibt es so viel zu sehen, dass es anmaßend wäre, hier
 
     +item #[strong Brooklyn Bridge] — Perfekt für einen ausgiebigen Spaziergang über eine historische Brücke mit tollem Blick über die Skyline. #[em (Station High St [A, C] von Brooklyn aus oder Fulton Street [A, C, 2, 3, 4, 5] bzw. Brooklyn Bridge City Hall [4, 5, 6] von Manhattan aus)]
 
-    +item #[strong Times Square] — Ebenfalls ein Touristen-Klassiker und der nötige Kulturschock für mich, nachdem ich feststellte, dass mich alles doch ein wenig zu sehr an Berlin erinnerte. Tagsüber zwar ebenfalls beeindruckend, aber am besten nachts zu genießen. Wenn die Menschenmassen nicht wären, würde ich noch viel öfter abends 7th Ave entlangschlendern. #[em (#[a(href="https://www.google.com/maps/place/Times+Square" target="_blank") diverse Stationen])]
+    +item #[strong Times Square] — Ebenfalls ein Touristen-Klassiker und der nötige Kulturschock für mich, nachdem ich feststellte, dass mich alles doch ein wenig zu sehr an Berlin erinnerte. Tagsüber zwar ebenfalls beeindruckend, aber am besten nachts zu genießen. Wenn die Menschenmassen nicht wären, würde ich noch viel öfter abends 7th Ave entlangschlendern. #[em (#[+a("https://www.google.com/maps/place/Times+Square") diverse Stationen])]
 
     +item #[strong High Line] — Ein über 2km langer Park auf einer ehemaligen Hochbahntrasse. Perfekt kombinierbar mit einer Tour des Meatpacking Districts. #[em (Gansevoort St / Washington St, Meatpacking District, Station 14 St [A, C, E] oder 8 Av [L])]
 
@@ -43,32 +43,32 @@ p Zugegeben, in New York gibt es so viel zu sehen, dass es anmaßend wäre, hier
 
     +item #[strong Chinatown, Little Italy, East Village] — Chinatown ist laut, bunt und belebt und der beste Ort für günstiges asiatisches Essen, wie z.B. ein großer $3-Teller Dumplings oder frischer Hummer. Danach kann man prima weiter durch Little Italy spazieren und ended schließlich in East Village. #[em (ab Station Canal St [6, J, N, Q R, Z])]
 
-h2 Geld und Bezahlen
++h(2) Geld und Bezahlen
 p Ja, New York ist teurer als Berlin und das ist wenig überraschend. Trotzdem habe ich hier in einem Monat fast weniger Geld ausgegeben, als in einem durchschnittlichen Monat in Berlin und das, obwohl ich deutlich aktiver war. Ich habe viel frisch gekocht, habe in Restaurants abseits der Tourimeilen gegessen und zu meinen Freizeitaktivitäten zählten deutlich mehr Spaziergänge als Clubbesuche.
 
 p Die amerikanische Trinkgeldkultur hat mir zwar anfangs Sorgen bereitet, aber die erwarteten 15% in Restaurants mit table service (also alles, wo man bedient wird) und hin und wieder ein Dollar an der Bar waren im Nachhinein betrachtet dann doch kein Weltuntergang. Viel gewöhnungsbedürftiger fand ich das nachträgliche Addieren der Steuer auf so gut wie alles, das man kauft. Mit meiner EC-Karte mit Maestro-Symbol konnte ich hier übrigens ohne Probleme an so gut jedem Geldautomaten (ATM) Geld abheben. Viele Automaten haben eine geringe Gebühr, die sich allerdings meist irgendwo zwischen $1,50 und $3 bewegt.
 
-h2 Bestellen und Convenience
++h(2) Bestellen und Convenience
 
 p &#8220;New York, die Stadt, die niemals schläft&#8221; heißt es immer so schön. New York, wo #[em convenience] groß geschrieben wird und man sich so gut wie alles liefern lassen kann. Ich war ein wenig enttäuscht, als ich feststellen musste, dass dies tatsächlich eher im Zentrum von Manhattan zutrifft. Nach zweistündigem Warten auf eine kalte Dominos-Pizza vom Laden um die Ecke und einem Bier-Lieferanten, der zuerst das Haus, dann die entspechende Klingel nicht fand, gab ich schließlich auf.
 
-p Viele Websiten sehen außerdem aus mir unerfindlichen Gründen nicht vor, dass man den Service in Anspruch nehmen will und #[em keine] amerikanische Kreditkarte hat. Paypal ist leider auch nicht immer eine Alternative. Die Rettung war #[a(href="https://www.entropay.com" target="_blank") Entropay], eine virtuelle amerikanische Kreditkarte, die man aufladen und (gegen eine geringe Gebühr) problemlos für Onlinekäufe benutzen kann.
+p Viele Websiten sehen außerdem aus mir unerfindlichen Gründen nicht vor, dass man den Service in Anspruch nehmen will und #[em keine] amerikanische Kreditkarte hat. Paypal ist leider auch nicht immer eine Alternative. Die Rettung war #[+a("https://www.entropay.com") Entropay], eine virtuelle amerikanische Kreditkarte, die man aufladen und (gegen eine geringe Gebühr) problemlos für Onlinekäufe benutzen kann.
 
 p Wer wie ich hin und wieder zu faul ist, das Haus zu verlassen, hier ein paar Online-Tips. (Und nich vergesssen, vorher einmal kurz nach Promo-Codes zu googeln!)
 
 +list
-    +item #[a(href="http://www.seamless.com/" target="_blank") #[strong Seamless]] / #[a(href="https://www.grubhub.com/" target="_blank") #[strong GrubHub]] — Essen, Auswahl aus über 7.000 Restaurants
+    +item #[+a("http://www.seamless.com/") #[strong Seamless]] / #[+a("https://www.grubhub.com/") #[strong GrubHub]] — Essen, Auswahl aus über 7.000 Restaurants
 
-    +item #[a(href="http://eat24hours.com/" target="_blank") #[strong Eat24hours]] — Essen, ein wenig nervig zu navigieren, aber zuverlässig
+    +item #[+a("http://eat24hours.com/") #[strong Eat24hours]] — Essen, ein wenig nervig zu navigieren, aber zuverlässig
 
-    +item #[a(href="https://www.delivery.com/" target="_blank") #[strong Delivery]] — liefert neben Essen auch Lebensmittel und Alkohol und holt Wäsche zum Waschen ab und bringt sie wieder
+    +item #[+a("https://www.delivery.com/") #[strong Delivery]] — liefert neben Essen auch Lebensmittel und Alkohol und holt Wäsche zum Waschen ab und bringt sie wieder
 
-    +item #[a(href="http://www.drizly.com" target="_blank") #[strong Drizly]] — riesengroße Auswahl an Alkohol, von Craft Beer über Cider bis hin zu Whiskey und Rum (hilfreich, wenn gerade kein Liquor Store in der Nähe ist – denn harter Alkohol darf hier nicht im Supermarkt verkauft werden)
+    +item #[+a("http://www.drizly.com") #[strong Drizly]] — riesengroße Auswahl an Alkohol, von Craft Beer über Cider bis hin zu Whiskey und Rum (hilfreich, wenn gerade kein Liquor Store in der Nähe ist – denn harter Alkohol darf hier nicht im Supermarkt verkauft werden)
 
 
 +image("newyork_food.jpg", "Burger von Shake Shack und Hummer in China Town")
 
-h2 Essen und Trinken
++h(2) Essen und Trinken
 
 p Auch hier würde ich mir nie anmaßen, die ultimativen Geheimtipps zu kennen. Verhältnismäßig war ich nämlich nur recht selten auswärts essen und habe mich stattdessen in den kleinen Supermarkt um die Ecke verliebt und so oft frisch und lecker gekocht wie lange nicht mehr. Daher mein ultimativer Tipp: Lass die großen Supermarktketten links liegen und kaufe stattdessen im kleinen Laden um die Ecke. Ich war so glücklich über die endlosen Mengen an echten schwarzen Bohnen und der Vielfalt an mexikanischen Lebensmitteln. Hier außerdem ein paar Restaurants und Imbisse, die ich für gut befunden habe:
 
@@ -85,7 +85,7 @@ p Auch hier würde ich mir nie anmaßen, die ultimativen Geheimtipps zu kennen. 
 
     +item #[strong A&amp;A Doubles] — Doubles, ein beliebtes karibisches Streetfood-Gericht, sind kleine frittierte Fladenbrote gefüllt mit Kichererbsencurry und diversen Toppings. Eine meiner liebsten Neuentdeckungen und mit $1,50 pro Stück ein echtes Schnäppchen. #[em (481 Nostrand Ave, Bedford-Stuyvesant, Station Nostrand Ave [A, C])]
 
-h2 Zusammenfassung
++h(2) Zusammenfassung
 
 p Wow, was für eine Stadt. Der perfekte Ort für einen längeren Aufenthalt, vielfältig und weniger überwältigend, als ich mir immer ausgemalt habe. Die sechs Wochen an einem Ort zu verbringen war ebenfalls eine der besten Entscheidungen, die ich hätte treffen können. Ich habe viel über mich gelernt: über meine Motivation, meine Anpassungsfähigkeit und hoffentlich meine Zukunft. Und eine Kleinigkeit des Alltags, die ich ab sofort zu schätzen weiß und nie mehr als selbstverständlich hinnehmen werde (versprochen!): das Wegbier. In diesem Sinne: New York, ich komme bestimmt wieder!
 
