--- a/impressum.jade
+++ b/impressum.jade
@@ -4,24 +4,24 @@
 
 include _includes/_mixins
 
-h2 Haftungsausschluss / Disclaimer
++h(2) Haftungsausschluss / Disclaimer
 
-h3 Haftung für Inhalte
++h(3) Haftung für Inhalte
 
 p Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
 
-h3 Haftung für Links
++h(3) Haftung für Links
 
 p Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.
 
-h3 Urheberrecht
++h(3) Urheberrecht
 
 p Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
 
++h(2) Datenschutzerklärung
 
-h2 Impressum
++h(3) Allgemeines
 
-h3 Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:
 p Ihre personenbezogenen Daten (z.B. Anrede, Name, Anschrift, E-Mail-Adresse, Telefonnummer, Bankverbindung, Kreditkartennummer) werden von uns nur gemäß den Bestimmungen des deutschen Datenschutzrechts verarbeitet. Die nachfolgenden Vorschriften informieren Sie über Art, Umfang und Zweck der Erhebung, Verarbeitung und Nutzung personenbezogener Daten. Diese Datenschutzerklärung bezieht sich nur auf unsere Webseiten. Falls Sie über Links auf unseren Seiten auf andere Seiten weitergeleitet werden, informieren Sie sich bitte dort über den jeweiligen Umgang mit Ihren Daten.
 
 +h(3) Bestandsdaten
@@ -45,6 +45,10 @@ p Im Auftrag des Betreibers dieser Website wird Google diese Informationen benut
     +item Das Speichern von Cookies können Sie verhindern, indem Sie in Ihren Browser-Einstellungen &#8220;Cookies blockieren&#8221; wählen. Dies kann aber eine Funktionseinschränkung unserer Angebote zur Folge haben.
 
 p Quellen: #[+a("http://www.e-recht24.de") eRecht24], #[+a("http://www.muster-vorlagen.net/") muster-vorlagen.net]
+
++h(2) Impressum
+
++h(3) Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:
 p=author
 
 !=partial("_impressum")
