--- a/index.jade
+++ b/index.jade
@@ -7,6 +7,6 @@ include _includes/_mixins
 header.o-header.u-text-label(role="banner")
     a(href="/about") About me
     include _includes/_logo
-    a.text-label(href="https://twitter.com/" + profiles.twitter target="_blank") Twitter
+    +a("https://twitter.com/" + profiles.twitter) Twitter
 
 !=partial("_includes/_latest-posts")
