--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -2,6 +2,8 @@
 //- ⚡️ STYLE
 //- ----------------------------------
 
+//- Variables
+
 $color-back: #fff !default
 $color-front: #222 !default
 $color-subtle: #fafafa !default
@@ -14,6 +16,8 @@ $font-code: 'Source Code Pro', Consolas, 'Andale Mono', Menlo, Monaco, Courier, 
 
 $breakpoint-m: 800px
 
+
+//- Imports
 
 @import _base/mixins
 @import _base/reset
