--- a/_includes/_latest-posts.jade
+++ b/_includes/_latest-posts.jade
@@ -16,7 +16,7 @@ section.o-tiles
                 a.c-teaser__link(href="/blog/#{slug}")
                     h2.c-teaser__headline.u-heading-3.u-text-upper.u-text-center=post.headline
 
-                    svg.teaser-image(width=teaser_size height=teaser_size viewBox="0 0 " + teaser_size + " " + teaser_size style="background: rgb(" + ((post.colors) ? post.colors[1] : '255, 255, 255') + ")")
+                    svg(width=teaser_size height=teaser_size viewBox="0 0 #{teaser_size} #{teaser_size}" style="background: rgb(" + ((post.colors) ? post.colors[1] : '255, 255, 255') + ")")
                         defs
                             filter(id="duotone-filter-#{post_counter}")
                                 feColorMatrix(type="matrix" values=getColorMatrix(post.colors || false))
