--- a/feed.xml.jade
+++ b/feed.xml.jade
@@ -10,7 +10,7 @@ rss(version="2.0", xmlns:atom="http://www.w3.org/2005/Atom")
         title=title
         link=url
         description= description
-        atom:link(href="#{url}/feed", rel="self", type="application/rss+xml")
+        atom:link(href="#{url}/feed" rel="self" type="application/rss+xml")
 
         each post, slug in public.blog._data
             if post.published != false
